# oagp-org

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md
agent-sdk/: README.md  pyproject.toml
agent-sdk/examples/: README.md  bind_time_travel.py  demo-orgdef.opencatalog  run_demo.py
agent-sdk/examples/demo-output/: bind-event-doc-reviewer.body.md  bind-event-doc-reviewer.openthing  mechanics-demo.workflow.js  review-proposal.md  structural-agenttype-path.workflow.js
agent-sdk/src/oagp_agent_sdk/: __init__.py  authority.py  backends.py  bind.py  bind_event.py  guard.py  launch.py  run_seat.py
agent-sdk/tests/: conftest.py  test_authority.py  test_backends.py  test_bind_event.py  test_bind_integration.py  test_bind_unit.py  test_guard.py  test_launch.py  test_run_seat.py
agent-sdk/tests/fixtures/: minimal-orgdef.opencatalog
decisions/: proposal-agent-sdk-v0.2-amendment-workflows-composition-and-positioning.md  proposal-agent-sdk-v0.2-autonomous-dispatch.md  proposal-agent-sdk-v0.2-governance-addendum-autonomous-dispatch-constraints.md  proposal-canonical-adoption-cycle-skill-distribution-v0.1.md  proposal-canonical-adoption-cycle-skill-distribution-v0.2.md  proposal-consolidated-pattern-promotion-v1.md  proposal-oagp-adoption-cycle-canonical-promotion.md  proposal-oagp-closeout-canonical-promotion.md  proposal-oagp-init-canonical-promotion.md  proposal-seat-capability-manifest.md
install/: install-claude-code-skills.ps1  install-claude-code-skills.sh
memos/: 2026-05-21-1140--memodef-strategist--oagp-strategist--family-level-mcp-distribution-idea.openthing  (+80 more)
(+18 files in other folders)
